Add user contract and operation

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,13 @@ Style/Documentation:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Style/ClassAndModuleChildren:
+  EnforcedStyle: compact
+  Exclude:
+    - 'app/channels/application_cable/channel.rb'
+    - 'app/channels/application_cable/connection.rb'
+    - 'config/application.rb'
+
 Metrics/MethodLength:
   Exclude:
     - 'db/seeds.rb'
