--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,6 +34,7 @@ Style/ClassAndModuleChildren:
     - 'app/channels/application_cable/channel.rb'
     - 'app/channels/application_cable/connection.rb'
     - 'config/application.rb'
+    - 'spec/docs/v1/**/*.rb'
 
 Metrics/MethodLength:
   Exclude:
